feat: add threadsafe assignment manager